--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,9 @@ add_library(units
     src/tests.cpp
     
     include/common_ratio.h
-    include/unit.h
+    include/length.h
     include/quantity.h
+    include/unit.h
 )
 target_include_directories(units PUBLIC include)
 target_compile_features(units PUBLIC cxx_std_17)
